adicionando imagens, estrutura e estilos ao site - projeto finalizado

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <title>Atividade Descomplica - Criação e Gerenciamento de um Repositório no GitHub</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Apresentação de Desenvolvedor</h1>
+    </header>
+    <div class="container">
+        <div class="content">
+            <img src="./assets/perfil.jpg" alt="Foto de Perfil" class="profile-pic">
+            <h2>Sobre Mim</h2>
+            <p>Olá, meu nome é <b>Filipe Medeiro</b> e sou um desenvolvedor dedicado a ganhar espaço no mercado. Tenho me esforçado para aprimorar minhas habilidades e estou constantemente em busca de novas oportunidades para crescer profissionalmente. Com uma paixão por tecnologia e inovação, estou comprometido em entregar soluções de alta qualidade e me manter atualizado com as tendências do setor.</p>
+            
+            <img src="./assets/foto.jpg" alt="Foto" class="photo">
+
+            <p>Hoje trabalho na empresa Multipedidos como Analista de TI e tenho aprendido muito, almejando a alcançar a posição de Desenvolvedor Jr.</p>
+
+            <h2 class="contatos">Contatos</h2>
+            <div class="social-links">
+                <a href="https://www.instagram.com/filipemedeiro" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
+                <a href="https://www.linkedin.com/in/filipe-medeiro-3b8924180" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a>
+                <a href="mailto:medeirolp@gmail.com" target="_blank"><i class="fas fa-envelope"></i>Gmail</a>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2024 Filipe Medeiro. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
